<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sparsh.smartparkingsystem.registration.LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        style="@style/Reg_log_Style"
        android:layout_alignParentTop="true"
        android:text="@string/txt_title_login" />

    <EditText
        android:id="@+id/edt_user_id"
        style="@style/Reg_EditTextStyle"
        android:layout_below="@+id/tv_login_title"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_user_id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edt_pswd"
        style="@style/Reg_EditTextStyle"
        android:layout_below="@+id/edt_user_id"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_pswd"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/tv_forgot_pswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_pswd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/darkgrey"
        android:text="@string/txt_forgot_pswd" />


    <Button
        android:id="@+id/btn_login"
        style="@style/Reg_btnStyle"
        android:layout_below="@+id/edt_pswd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:text="@string/btn_login" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Reg_btnStyle"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/btn_register" />


</RelativeLayout>
