<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pswd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sparsh.smartparkingsystem.profile.ChangePswdActivity">

    <!-- Header View -->

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/app_theme_color">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_title_change_pswd"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@null"
            android:src="@drawable/back_button"
            android:visibility="visible" />
    </RelativeLayout>


    <EditText
        android:id="@+id/edt_current_pswd"
        style="@style/Reg_EditTextStyle"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/rl_header"
        android:ems="10"
        android:hint="@string/hint_crnt_pswd"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_new_pswd"
        style="@style/Reg_EditTextStyle"
        android:layout_below="@+id/edt_current_pswd"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_new_pswd"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/edt_cnf_pswd"
        style="@style/Reg_EditTextStyle"
        android:layout_below="@+id/edt_new_pswd"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_cnf_pswd"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/Reg_btnStyle"
        android:layout_below="@+id/edt_cnf_pswd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/btn_submit" />


</RelativeLayout>
