<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sparsh.smartparkingsystem.dashboard.DashboardActivity">

    <!-- Header View -->

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/app_theme_color">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_home_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_search_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:src="@drawable/search_icon_32"
            android:visibility="visible" />

        <!--   <SearchView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_alignParentEnd="true"
               android:layout_centerVertical="true"
               android:layout_marginEnd="10dp" />-->
    </RelativeLayout>

    <!-- Center View -->

    <RelativeLayout
        android:id="@+id/rl_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_footer"
        android:layout_below="@+id/rl_header"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white">

        <!-- Home -->

        <RelativeLayout
            android:id="@+id/rl_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <fragment
                android:id="@+id/mapfragment"
                class="com.here.android.mpa.mapping.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/edt_auto_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:ems="10"
                android:hint="Search parking zones..."
                android:inputType="textPersonName"
                android:paddingEnd="8dp"
                android:paddingStart="8dp" />

            <ListView
                android:id="@+id/lv_auto_search_list"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/edt_auto_search"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

        <!-- Bookings -->

        <RelativeLayout
            android:id="@+id/rl_bookings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:weightSum="3">


                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="All" />

                <TextView
                    android:id="@+id/tv_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="Upcoming" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="Cancel" />

            </LinearLayout>
        </RelativeLayout>

        <!-- Settings -->

        <RelativeLayout
            android:id="@+id/rl_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/rl_profile_lbl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_edit_profile_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Edit Profile"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/div1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl_profile_lbl"
                android:layout_margin="2dp"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/rl_notify_lbl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/div1"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_notification_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Notification"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:text="ToggleButton" />


            </RelativeLayout>

            <View
                android:id="@+id/div2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl_notify_lbl"
                android:layout_margin="2dp"
                android:background="@color/grey" />

            <RelativeLayout
                android:id="@+id/rl_logout_lbl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/div2"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_logout_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="Logout"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

        <!-- Contact -->

        <RelativeLayout
            android:id="@+id/rl_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </RelativeLayout>


    </RelativeLayout>

    <!--Footer View -->

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/app_theme_color"
        android:orientation="horizontal"
        android:weightSum="4">

        <!-- Home Button -->

        <RelativeLayout
            android:id="@+id/rl_home_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_home_lbl"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/home_w" />


        </RelativeLayout>

        <!-- Booking Button -->

        <RelativeLayout
            android:id="@+id/rl_booking_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_booking_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_booking_lbl"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_booking"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/info_g" />

        </RelativeLayout>

        <!-- Settings Button -->

        <RelativeLayout
            android:id="@+id/rl_settings_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_setting_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_settings_lbl"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_setting"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_menu_manage" />

        </RelativeLayout>

        <!-- Contact Us-->

        <RelativeLayout
            android:id="@+id/rl_contact_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_contact_lbl"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_cnt"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/contact_g" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
